Setting up test site to read static content from multiple locations.

--- a/test/EventUITest/EventUITest.csproj
+++ b/test/EventUITest/EventUITest.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\EventUITestFramework\EventUITestFramework.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\" />
+  </ItemGroup>
+
 </Project>
