--- a/test/EventUITestFramework/EventUITestFramework.csproj
+++ b/test/EventUITestFramework/EventUITestFramework.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="YoggTree" Version="1.0.0-CI-20230411-191200" />
+    <PackageReference Include="YoggTree" Version="1.0.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Compilation\" />
   </ItemGroup>
 
 </Project>
