Changing reference from YoggTree to PogTree.

--- a/test/EventUITest/EventUITest.csproj
+++ b/test/EventUITest/EventUITest.csproj
@@ -18,4 +18,8 @@
 		<Content Include="..\test_src\**" Link="test_src\%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="PogTree" Version="1.0.1" />
+	</ItemGroup>
+
 </Project>
