--- a/test/EventUITestFramework/EventUITestFramework.csproj
+++ b/test/EventUITestFramework/EventUITestFramework.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="YoggTree" Version="1.0.0.16" />
+    <PackageReference Include="PogTree" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
