--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,10 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Development Min Results
+src/dist/evui.js
+src/dist/evui.min.js
+
+
+EventUIBuild/launchSettings.json
