Got jsconfig working correctly.

--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,6 +1,7 @@
 ﻿{
   "include": [
-    "EventUI.js",
-    "Modules/*.js"
+    "test/EVUITest.js",
+    "raw/EventUI.js",
+    "raw/Modules/*.js"
   ]
 }
