--- a/test/EventUITest/EventUITest.csproj
+++ b/test/EventUITest/EventUITest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,6 +13,7 @@
 
 	<ItemGroup>
 		<Content Include="..\test_src\**" Link="test_src\%(RecursiveDir)%(Filename)%(Extension)" />
+		<Content Include="..\..\src\**" Link="src\%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
 	<ItemGroup>
