Refactoring EVUITest to use the concept of LogLevels, got basic versions of UnitTestRunner and UnitTestHost set up.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "src/raw/**/**.js",
     "src/test/**/**.js",
     "test/test_src/**/**.js",
-    "doc/code/*.js",
-    "test/EventUITest/wwwroot/js/TestScript/**/*.js"
+    "test/EventUITest/wwwroot/js/TestScript/**/*.js",
+    "test/EventUITest/wwwroot/js/UnitTesting/**/*.js"
   ]
 }
